# Carrito-PreparcialFinal

./: .gitignore  Dockerfile  Dockerfile.test  docker-compose.test.yml  pyproject.toml
src/carrito/: api.py
src/database/: config.py  models.py  repositorio.py
src/tests/: conftest.py
src/tests/e2e/: test_carrito.py
src/tests/integration/:  test_repositorio_db.py  test_api_integracion.py
src/tests/system/: test_sistema_e2e.py
